--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,6 @@
 [settings]
-skip_glob = */qiskit/*
+skip_glob = tools/*
+extend_skip_glob = */qiskit/*
 profile = black
 ensure_newline_before_comments = true
 filter_files = true
