--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-exclude = .*/qiskit/.*
+exclude = (qiskit|^tools)/.*
 ignore_missing_imports = True
 no_implicit_optional = True
 scripts_are_modules = True
