--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
     entry: pylint -rn -d import-error
     language: python
     files: .*\.py
-    exclude: (test|docs)/.*
+    exclude: (tools|test|docs)/.*
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v0.982
@@ -64,7 +64,7 @@ repos:
     entry: mypy
     language: python
     files: .*\.py
-    exclude: (test|docs)/.*
+    exclude: (tools|test|docs)/.*
 
 
 ################################################################################
