--- a/.pylintrc
+++ b/.pylintrc
@@ -24,7 +24,8 @@ ignore=CVS
 
 # Add files or directories matching the regex patterns to the ignore-list. The
 # regex matches against paths.
-ignore-paths=.*/qiskit/.*
+ignore-paths=.*/qiskit/.*,
+             ./tools/.*
 
 # Files or directories matching the regex patterns are skipped. The regex
 # matches against base names, not paths.
