chore: rename package to staged_primitives
chore: add dropped staged_primitives module

--- a/.cz.toml
+++ b/.cz.toml
@@ -5,7 +5,7 @@ version_format = "$version"
 version = "1.0.0"
 version_files = [
     ".cz.toml:version",
-    "stprimitives/__init__.py:__version__",
+    "staged_primitives/__init__.py:__version__",
     "test/__init__.py:__version__"
 ]
 update_changelog_on_bump = true
