--- a/tox.ini
+++ b/tox.ini
@@ -26,11 +26,11 @@ basepython = python3.11
 extras =
     lint
 commands =
-    flake8 stprimitives test docs
-    isort stprimitives test docs --check-only
-    black stprimitives test docs --check
-    pylint -rn stprimitives
-    mypy stprimitives
+    flake8 staged_primitives test docs
+    isort staged_primitives test docs --check-only
+    black staged_primitives test docs --check
+    pylint -rn staged_primitives
+    mypy staged_primitives
 
 [testenv:style]
 description = style formatter
@@ -39,9 +39,9 @@ basepython = python3.11
 extras =
     lint
 commands =
-    autoflake -i --remove-all-unused-imports -r stprimitives test docs 
-    isort stprimitives test docs
-    black stprimitives test docs
+    autoflake -i --remove-all-unused-imports -r staged_primitives test docs 
+    isort staged_primitives test docs
+    black staged_primitives test docs
 
 [testenv:coverage]
 description = coverage tests
@@ -49,7 +49,7 @@ basepython = python3.11
 setenv =
     {[testenv]setenv}
 commands =
-    pytest --cov stprimitives
+    pytest --cov staged_primitives
 
 [testenv:docs]
 description = build sphinx documentation
