--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ test = [
     "pytest >= 7.1.2",
     "pytest-cov >= 3.0.0",
     "pytest-randomly >= 3.12.0",
+    "qiskit-aer >= 0.11.0",
 ]
 lint = [
     "autoflake >= 1.7.6",
