ci(github): ignore .github/workflows from template sync

--- a/.github/.templatesyncignore
+++ b/.github/.templatesyncignore
@@ -2,13 +2,12 @@
 docs/
 pyproject_qiskit/
 test/
-
 # PACKAGE
 .cz.toml
 CITATION.bib
 pyproject.toml
 README.md
-
 # CI/CD/CT
 .github/CODEOWNERS
+.github/workflows
 tox.ini
