--- a/.github/workflows/template-sync.yaml
+++ b/.github/workflows/template-sync.yaml
@@ -1,4 +1,4 @@
-name: Sync template
+name: Template sync
 
 on:
   schedule:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: actions-template-sync
+      - name: Sync template
         uses: AndreasAugustin/actions-template-sync@v0.7.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
