ci(github): fix CODEOWNERS format

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,8 +20,7 @@
 # review/merging of PRs in different subsections of the repository.
 
 # Global rule, unless specialized by a later one
-* @Qiskit-Extensions/prototypes
-* @Qiskit-Extensions/primitives
+* @Qiskit-Extensions/prototypes @Qiskit-Extensions/primitives
 
 # Folders (also their corresponding tests)
 
